force-app/main/default/objects/SLA_Tracking__c/SLA_Tracking__c.object-meta.xml
<CustomObject>
    <description>Used for tracking details of Order Fulfilment SLAs</description>
    <label>SLA Tracking</label>
    <nameField>
        <label>SLA Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>