force-app/main/default/objects/SLA_Tracking__c/fields/Activation_line__c.field-meta.xml
<CustomField>
    <fullName>Activation_line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activation line</label>
    <referenceTo>Activation_line__c</referenceTo>
    <relationshipLabel>SLA Trackings</relationshipLabel>
    <relationshipName>SLA_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>