force-app/main/default/objects/SLA_Tracking__c/fields/Activation_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Activation_Line_Status__c</fullName>
    <description>Documents the start Status of each SLA</description>
    <label>Activation Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Waiting for customer</fullName>
            </value>
            <value>
                <fullName>DIY or FS</fullName>
            </value>
            <value>
                <fullName>Order Equipment/Book FS</fullName>
            </value>
            <value>
                <fullName>Circuit &amp; SIM activation</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Pending fulfilment</fullName>
            </value>
            <value>
                <fullName>Fulfilment in progress</fullName>
            </value>
            <value>
                <fullName>Fulfilment failed</fullName>
            </value>
            <value>
                <fullName>Order in Progress</fullName>
            </value>
            <value>
                <fullName>Awaiting Vendor</fullName>
            </value>
            <value>
                <fullName>Awaiting Documentation</fullName>
            </value>
            <value>
                <fullName>Awaiting B2B Design</fullName>
            </value>
            <value>
                <fullName>Awaiting NRI</fullName>
            </value>
            <value>
                <fullName>Technician Booked</fullName>
            </value>
            <value>
                <fullName>Awaiting Final Installation</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>