force-app/main/default/objects/SLA_Tracking__c/fields/Active_SLA__c.field-meta.xml
<CustomField>
    <fullName>Active_SLA__c</fullName>
    <formula>Id =   Case__r.Latest_SLA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active SLA Case</label>
    <type>Checkbox</type>
</CustomField>