force-app/main/default/objects/SLA_Tracking__c/fields/Active_SLA_Activation_LIne__c.field-meta.xml
<CustomField>
    <fullName>Active_SLA_Activation_LIne__c</fullName>
    <formula>Id = Activation_line__r.Latest_SLA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active SLA Activation LIne</label>
    <type>Checkbox</type>
</CustomField>