force-app/main/default/objects/SLA_Tracking__c/fields/Case_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Change__c</fullName>
    <description>Documents the change to Case Status for each SLA</description>
    <label>Case Status Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Enrichment</fullName>
            </value>
            <value>
                <fullName>Front Office</fullName>
            </value>
            <value>
                <fullName>Gather Information</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Contract Compliance</fullName>
            </value>
            <value>
                <fullName>Close Case</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>