force-app/main/default/objects/SLA_Tracking__c/fields/Has_been_breached__c.field-meta.xml
<CustomField>
    <fullName>Has_been_breached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been breached</label>
    <type>Checkbox</type>
</CustomField>