force-app/main/default/objects/SLA_Tracking__c/fields/SLA_Breach__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breach__c</fullName>
    <description>Indicates if the SLA has been breached</description>
    <formula>OR(

AND(

Name != &quot;SLA Fiber Technician Booked&quot;,
 SLA_Time_Elapsed__c &gt;  SLA_Breach_Threshold__c ,
ISNULL( SLA_Stop_Time__c ) 

),

 AND( 

 Name = &quot;SLA Fiber Technician Booked&quot;,   
ISBLANK(Activation_line__r.SAP_PR_no__c),
(TODAY() + 6) &gt; Activation_line__r.AL_Planned_Delivery_Date__c 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Breach</label>
    <type>Checkbox</type>
</CustomField>