force-app/main/default/objects/SLA_Tracking__c/fields/SLA_Breach_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breach_Date__c</fullName>
    <formula>SLA_Start_Time__c + 
 CASE( 
  WEEKDAY(  DATEVALUE(SLA_Start_Time__c ) ), 
   1, IF(SLA_Breach_Threshold__c &gt;40, (SLA_Breach_Threshold__c/8)+2,SLA_Breach_Threshold__c/8),
   2, IF(SLA_Breach_Threshold__c &gt;32, (SLA_Breach_Threshold__c/8)+2,SLA_Breach_Threshold__c/8),
   3, IF(SLA_Breach_Threshold__c &gt;24, (SLA_Breach_Threshold__c/8)+2,SLA_Breach_Threshold__c/8),
   4, IF(SLA_Breach_Threshold__c &gt;16, (SLA_Breach_Threshold__c/8)+2,SLA_Breach_Threshold__c/8),
   5, IF(SLA_Breach_Threshold__c &gt;8, (SLA_Breach_Threshold__c/8)+2,SLA_Breach_Threshold__c/8),
   6, IF(SLA_Breach_Threshold__c &gt;=0, (SLA_Breach_Threshold__c/8)+2,SLA_Breach_Threshold__c/8),
   7, IF(SLA_Breach_Threshold__c &gt;0, (SLA_Breach_Threshold__c/8)+1,SLA_Breach_Threshold__c/8),
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Breach Date</label>
    <type>DateTime</type>
</CustomField>