force-app/main/default/objects/SLA_Tracking__c/fields/SLA_Breach_Threshold__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breach_Threshold__c</fullName>
    <label>SLA Breach Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>