force-app/main/default/objects/SLA_Tracking__c/fields/SLA_Duration__c.field-meta.xml
<CustomField>
    <fullName>SLA_Duration__c</fullName>
    <description>Count number of Business Days for the SLA</description>
    <formula>ROUND( 8 * (
( 5 * FLOOR( (  SLA_Stop_Time__c  - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos;) ) / 7) +
MIN(5,
FLOOR ( MOD ( SLA_Stop_Time__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos;), 7) / 1) +
MIN( 1, 24 / 8 * ( MOD( SLA_Stop_Time__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( (  SLA_Start_Time__c  - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos;) ) / 7) +
MIN( 5,
FLOOR( MOD( SLA_Start_Time__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos;), 7) / 1) +
MIN( 1, 24 / 8 * ( MOD( SLA_Start_Time__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos; ), 1) ) )
)
)
),
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>