force-app/main/default/objects/SLA_Tracking__c/fields/SLA_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Start_Time__c</fullName>
    <label>SLA Start Time</label>
    <type>DateTime</type>
</CustomField>