force-app/main/default/objects/SLA_Tracking__c/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <description>Shows a flag if the SLA has been breached. Mainly for reporting purposes.</description>
    <formula>IF(
SLA_Breach__c = true,
IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;Red&quot;, 16, 16),

IF(
SLA_Breach__c = false,
IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Green&quot;, 16, 16),
IMAGE(&quot;/img/s.gif&quot;, &quot;NA&quot;, 16, 16)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Status</label>
    <type>Text</type>
</CustomField>