force-app/main/default/objects/SLA_Tracking__c/fields/SLA_Stop_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Stop_Time__c</fullName>
    <label>SLA Stop Time</label>
    <type>DateTime</type>
</CustomField>