force-app/main/default/objects/SLA_Tracking__c/fields/SLA_Time_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>SLA_Time_Elapsed__c</fullName>
    <description>Number of hours elapsed from SLA Start Time</description>
    <formula>ROUND( 8 * (
( 5 * FLOOR( (  NOW()  - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos;) ) / 7) +
MIN(5,
FLOOR ( MOD (  NOW() - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos;), 7) / 1) +
MIN( 1, 24 / 8 * ( MOD(  NOW() - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( SLA_Start_Time__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos;) ) / 7) +
MIN( 5,
FLOOR( MOD( SLA_Start_Time__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos;), 7) / 1) +
MIN( 1, 24 / 8 * ( MOD( SLA_Start_Time__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos; ), 1) ) )
)
)
),
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Time Elapsed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>