force-app/main/default/objects/SLA_Tracking__c/fields/Status_Change_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Time__c</fullName>
    <description>Time stamp when a Status is changed from one to another</description>
    <label>Status Change Time</label>
    <type>DateTime</type>
</CustomField>