force-app/main/default/objects/SLA_Tracking__c/fields/Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Status_Duration__c</fullName>
    <description>Calculates number of hours when a Case or Activation Line is in a certain Status</description>
    <formula>ROUND( 8 * (
( 5 * FLOOR( (  Status_Change_Time__c  - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos;) ) / 7) +
MIN(5,
FLOOR ( MOD ( Status_Change_Time__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos;), 7) / 1) +
MIN( 1, 24 / 8 * ( MOD( Status_Change_Time__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( SLA_Start_Time__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos;) ) / 7) +
MIN( 5,
FLOOR( MOD( SLA_Start_Time__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos;), 7) / 1) +
MIN( 1, 24 / 8 * ( MOD( SLA_Start_Time__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos; ), 1) ) )
)
)
),
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>